managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/Scheduled_Apex_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These are the settings that control the daily scheduler.</description>
    <label>Scheduled Apex Settings</label>
</CustomObject>