managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/ActiveJobStatuses__c.field-meta.xml
<CustomField>
    <fullName>ActiveJobStatuses__c</fullName>
    <defaultValue>&apos;QUEUED,PREPARING,PROCESSING,HOLDING&apos;</defaultValue>
    <description>A comma separated list of which jobs statuses we consider as active...</description>
    <inlineHelpText>A comma separated list of which jobs statuses we consider as active...</inlineHelpText>
    <label>Active Job Statuses</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>