managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/DisableCompile__c.field-meta.xml
<CustomField>
    <fullName>DisableCompile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to prevent auto updates of metadata.</description>
    <inlineHelpText>Check to prevent auto updates of metadata.</inlineHelpText>
    <label>DisableCompile</label>
    <type>Checkbox</type>
</CustomField>