managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/ExcludedJobTypes__c.field-meta.xml
<CustomField>
    <fullName>ExcludedJobTypes__c</fullName>
    <defaultValue>&apos;ApexToken,BatchApexWorker,Future,ScheduledApex,QueueableApex&apos;</defaultValue>
    <description>Comma separated list of which jobs types to ignore.</description>
    <inlineHelpText>Comma separated list of which jobs types to ignore.</inlineHelpText>
    <label>Excluded Job Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>