managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <defaultValue>5</defaultValue>
    <description>how many minutes until the next time the job runs</description>
    <inlineHelpText>how many minutes until the next time the job runs</inlineHelpText>
    <label>Frequency</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>