managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <description>This is the basename of the the scheduled apex entry.</description>
    <inlineHelpText>This is the basename of the the scheduled apex entry.</inlineHelpText>
    <label>Job Name</label>
    <length>77</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>