managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/MaxConcurrentJobs__c.field-meta.xml
<CustomField>
    <fullName>MaxConcurrentJobs__c</fullName>
    <defaultValue>50</defaultValue>
    <description>How many jobs we attempt to queue at once.   If we queue too many, jobs go to the flex queue, which reduces the effectiveness of the prioritization.</description>
    <inlineHelpText>How many jobs we attempt to queue at once.   If we queue too many, jobs go to the flex queue, which reduces the effectiveness of the prioritization.</inlineHelpText>
    <label>Max Concurrent Jobs</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>