managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/Modulus__c.field-meta.xml
<CustomField>
    <fullName>Modulus__c</fullName>
    <defaultValue>60</defaultValue>
    <description>how many minutes until a fixed slot (this should probably be a multiple of frequency)</description>
    <inlineHelpText>how many minutes until a fixed slot (this should probably be a multiple of frequency)</inlineHelpText>
    <label>Modulus</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>