managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/QueueAhead__c.field-meta.xml
<CustomField>
    <fullName>QueueAhead__c</fullName>
    <defaultValue>1</defaultValue>
    <description>how many slots should we have prescheduled in the immediate future</description>
    <inlineHelpText>how many slots should we have prescheduled in the immediate future</inlineHelpText>
    <label>Queue Ahead</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>