managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/SortFlexQueue__c.field-meta.xml
<CustomField>
    <fullName>SortFlexQueue__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if we attempt to sort the flex queue by priority.</description>
    <inlineHelpText>Controls if we attempt to sort the flex queue by priority.</inlineHelpText>
    <label>Sort Flex Queue</label>
    <type>Checkbox</type>
</CustomField>