managedscheduledapex-app/objects/Scheduled_Apex_Settings__c/fields/TriggerManagementClass__c.field-meta.xml
<CustomField>
    <fullName>TriggerManagementClass__c</fullName>
    <defaultValue>&apos;TriggerManagement&apos;</defaultValue>
    <description>This is the name of a trigger management class that implements a callable interface.</description>
    <label>TriggerManagementClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>